Диплом: + Калькулятор + Кнопка "Больше"

--- a/index.html
+++ b/index.html
@@ -17,14 +17,10 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
-
     <title>Септик-погреб</title>
-
-
 </head>
 
 <body>
-
 <header>
     <div class="container">
         <div class="row">
@@ -81,15 +77,13 @@
                 <form class="main-form text-center wow fadeInRight">
                     <h4>Заказать консультацию!</h4>
                     <p>Не знаете как построить канализацию? <br> Закажите <span>бесплатную</span> консультацию <br>
-                        мы
-                        подскажем и подготовим проект и смету</p>
+                        мы подскажем и подготовим проект и смету</p>
                     <label for="phone_3">Ваш телефон для получения скидки</label>
                     <input class="phone-user" type="text" id="phone_3" name="user_phone"
                            placeholder="+7(___)___-__-__" required>
                     <button class="button main-form-btn" name="submit" type="submit">Получить консультацию</button>
                     <p class="small">Заполнения заявки Вас ни к чему не обязывает! <br> Вы сможете отказаться в
-                        любой
-                        момент</p>
+                        любой момент</p>
                     <p class="stock">Осталось 3 места на май !</p>
                 </form>
             </div>
@@ -104,9 +98,8 @@
                 <h2>Получите расчёт стоимости <br> <span>за 2000 руб.</span> <strong>бесплатно,</strong><br>а так-же
                     скидку на септик!</h2>
                 <p>Оставьте заявку на расчет стоимости септика и мы зафиксируем за вами сезонные цены. <br><br>По
-                    своему
-                    номеру телефона вы сможете получить скидку. <br> Это позволит сэкономить вам <strong>до 10 000
-                        рублей</strong><br> при заказе септиков.</p>
+                    своему номеру телефона вы сможете получить скидку. <br> Это позволит сэкономить вам <strong>до
+                        10 000 рублей</strong><br> при заказе септиков.</p>
             </div>
             <div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-12 wow fadeInRight"
                  data-wow-delay="0.2s">
@@ -119,10 +112,8 @@
                     <button class="button capture-form-btn" name="submit" type="submit">Получить расчет и скидку
                     </button>
                     <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика.
-                        типа
-                        грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента
-                        дома и
-                        еще 7 параметров</p>
+                        типа грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента
+                        дома и еще 7 параметров</p>
                 </form>
             </div>
         </div>
@@ -135,7 +126,6 @@
             <h2>Онлайн конструктор септика</h2>
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-
                     <div class="panel panel-default panel-one wow fadeInLeft">
                         <div class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
@@ -182,16 +172,16 @@
                                     <div class="select-box">
                                         <p><strong>Диаметр</strong></p>
                                         <select class="form-control expand">
-                                            <option value="1">1.4 метра</option>
-                                            <option value="1.2">2 метра</option>
+                                            <option>1.4 метра</option>
+                                            <option>2 метра</option>
                                         </select>
                                     </div>
                                     <div class="select-box">
                                         <p><strong>Количество колец</strong></p>
                                         <select class="form-control expand">
-                                            <option value="1">1 штука</option>
-                                            <option value="1.3">2 штуки</option>
-                                            <option value="1.5">3 штуки</option>
+                                            <option>1 штука</option>
+                                            <option>2 штуки</option>
+                                            <option>3 штуки</option>
                                         </select>
                                     </div>
                                 </div>
@@ -200,16 +190,16 @@
                                     <div class="select-box">
                                         <p><strong>Диаметр</strong></p>
                                         <select class="form-control expand">
-                                            <option value="1">1.4 метра</option>
-                                            <option value="1.2">2 метра</option>
+                                            <option>1.4 метра</option>
+                                            <option>2 метра</option>
                                         </select>
                                     </div>
                                     <div class="select-box">
                                         <p><strong>Количество колец</strong></p>
                                         <select class="form-control expand">
-                                            <option value="1">1 штука</option>
-                                            <option value="1.3">2 штуки</option>
-                                            <option value="1.5">3 штуки</option>
+                                            <option>1 штука</option>
+                                            <option>2 штуки</option>
+                                            <option>3 штуки</option>
                                         </select>
                                     </div>
                                 </div>
@@ -218,7 +208,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="panel panel-default panel-three wow fadeInLeft" data-wow-delay="0.2s">
                         <div class="panel-heading" role="tab" id="headingThree">
                             <h4 class="panel-title">
@@ -231,8 +220,6 @@
                         <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
                              aria-labelledby="headingThree">
                             <div class="panel-body">
-                                </p>
-
                                 <div class="onoffswitch">
                                     <input type="checkbox" name="onoffswitch-two" class="onoffswitch-checkbox"
                                            id="myonoffswitch-two" checked>
@@ -274,7 +261,6 @@
                 <img class="tank-img" src="img/constructor/septic-tank.png" alt="tank">
                 <input id="calc-result" type="text" placeholder="примерная стоимость" disabled>
             </div>
-
         </div>
     </div>
 </section>
@@ -283,7 +269,6 @@
     <div class="container">
         <div class="text-center">
             <h2>Акции и спецпредложения</h2>
-
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="shadow-block wow fadeInDown">
@@ -348,7 +333,6 @@
                 <button class="button add-sentence-btn">Больше...</button>
             </div>
 
-
         </div>
     </div>
 </section>
@@ -377,7 +361,7 @@
         <h2>Часто задаваемые вопросы</h2>
         <div class="panel-group wow slideInDown" id="accordion-two" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingOne-two">
+                <div class="panel-heading accordion" role="tab" id="headingOne-two">
                     <h4 class="panel-title">
                         <a role="button" data-toggle="collapse" data-parent="#accordion-two" href="#collapseOne-two"
                            aria-expanded="true" aria-controls="collapseOne-two">
@@ -385,7 +369,7 @@
                         </a>
                     </h4>
                 </div>
-                <div id="collapseOne-two" class="panel-collapse collapse in" role="tabpanel"
+                <div id="collapseOne-two" class="panel-collapse collapse in accordion-item" role="tabpanel"
                      aria-labelledby="headingOne">
                     <div class="panel-body">
                         Вероятность того, что вода в подводящем трубопроводе замерзнет, отсутствует, потому что она
@@ -399,7 +383,7 @@
                 </div>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingTwo-two">
+                <div class="panel-heading accordion" role="tab" id="headingTwo-two">
                     <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion-two"
                            href="#collapseTwo-two" aria-expanded="false" aria-controls="collapseTwo-two">
@@ -408,7 +392,7 @@
                         </a>
                     </h4>
                 </div>
-                <div id="collapseTwo-two" class="panel-collapse collapse" role="tabpanel"
+                <div id="collapseTwo-two" class="panel-collapse collapse accordion-item" role="tabpanel"
                      aria-labelledby="headingTwo-two">
                     <div class="panel-body">
                         Нет, не может. Армированное изделие и марка бетона М-350, позволяют выдерживать значительные
@@ -417,7 +401,7 @@
                 </div>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingThree-two">
+                <div class="panel-heading accordion" role="tab" id="headingThree-two">
                     <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion-two"
                            href="#collapseThree-two" aria-expanded="false" aria-controls="collapseThree-two">
@@ -425,7 +409,7 @@
                         </a>
                     </h4>
                 </div>
-                <div id="collapseThree-two" class="panel-collapse collapse" role="tabpanel"
+                <div id="collapseThree-two" class="panel-collapse collapse accordion-item" role="tabpanel"
                      aria-labelledby="headingThree-two">
                     <div class="panel-body">
                         Да. Иногда зимний монтаж предпочтительней. Большегрузная техника по мороженому грунту не
@@ -447,20 +431,16 @@
                 <p>Коммерческий директор компании "BIO-GLO"</p>
                 <span>"Мы всегда находим общий язык с клиентами, любим, когда нам задают вопросы. Ведь именно из них
                         мы понимаем, что волнует клиентов больше всего."</span>
-
-
             </div>
             <div class="col-lg-6 col-md-6">
                 <p class="question">Остались вопросы?</p>
                 <p>Введите свой вопрос и в течении 15 минут я свяжусь с вами!</p>
                 <form class="director-form">
-                    <input type="text" name="user_quest" placeholder="Введите свой вопрос" required>
+                    <input type="text" name="user_quest" placeholder="Введите свой вопрос" id="sss" required>
                     <button class="button director-btn consultation-btn" name="submit" type="submit">Получить
                         консультацию
                     </button>
                 </form>
-
-
             </div>
         </div>
     </div>
@@ -492,25 +472,22 @@
     </div>
 </header>
 
-
 <!-- Всплывающие окна -->
 <div class="popup-call popup">
     <div class="popup-dialog">
         <div class="popup-content">
             <!-- <div class="popup-form"> -->
-            <form class="capture-form text-center">
+            <form class="capture-form capture-form-call text-center">
                 <span class="circle"><button class="popup-close">&times;</button></span>
                 <label for="name_1">Как к вам обращаться</label>
                 <input type="text" id="name_1" name="user_name" placeholder="Ваше имя" required>
                 <label for="phone_1">Ваш телефон для получения скидки</label>
                 <input class="phone-user" type="text" id="phone_1" name="user_phone" placeholder="+7(___)___-__-__"
                        required>
-                <button class="button capture-form-btn" name="submit" type="submit">Получить расчет и
-                    скидку</button>
+                <button class="button capture-form-btn" name="submit" type="submit">Получить расчет и скидку</button>
                 <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
                     грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
-                    еще
-                    7 параметров</p>
+                    еще 7 параметров</p>
             </form>
             <!-- </div> -->
         </div>
@@ -521,7 +498,7 @@
     <div class="popup-dialog">
         <div class="popup-content">
             <!-- <div class="popup-form"> -->
-            <form class="capture-form text-center">
+            <form class="capture-form capture-form-calc text-center">
                 <span class="circle"><button class="popup-close">&times;</button></span>
                 <label for="name_11">Как к вам обращаться</label>
                 <input type="text" id="name_11" name="user_name" placeholder="Ваше имя" required>
@@ -531,8 +508,7 @@
                 <button class="button capture-form-btn" name="submit" type="submit">Заказать со скидкой</button>
                 <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
                     грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
-                    еще
-                    7 параметров</p>
+                    еще 7 параметров</p>
             </form>
             <!-- </div> -->
         </div>
@@ -543,19 +519,17 @@
     <div class="popup-dialog">
         <div class="popup-content">
             <!-- <div class="popup-form"> -->
-            <form class="capture-form text-center">
+            <form class="capture-form capture-form-check text-center">
                 <span class="circle"><button class="popup-close">&times;</button></span>
                 <label for="name_12">Как к вам обращаться</label>
                 <input type="text" id="name_12" name="user_name" placeholder="Ваше имя" required>
                 <label for="phone_12">Ваш телефон для получения скидки</label>
                 <input class="phone-user" type="text" id="phone_12" name="user_phone" placeholder="+7(___)___-__-__"
                        required>
-                <button class="button capture-form-btn" name="submit" type="submit">Получить чек-лист и
-                    скидку</button>
+                <button class="button capture-form-btn" name="submit" type="submit">Получить чек-лист и скидку</button>
                 <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
                     грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
-                    еще
-                    7 параметров</p>
+                    еще 7 параметров</p>
             </form>
             <!-- </div> -->
         </div>
@@ -566,7 +540,7 @@
     <div class="popup-dialog">
         <div class="popup-content">
             <!-- <div class="popup-form"> -->
-            <form class="capture-form text-center">
+            <form class="capture-form capture-form-consultation text-center">
                 <span class="circle"><button class="popup-close">&times;</button></span>
                 <label for="name_13">Как к вам обращаться</label>
                 <input type="text" id="name_13" name="user_name" placeholder="Ваше имя" required>
@@ -576,16 +550,13 @@
                 <button class="button capture-form-btn" name="submit" type="submit">Получить консультацию</button>
                 <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
                     грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
-                    еще
-                    7 параметров</p>
+                    еще 7 параметров</p>
             </form>
             <!-- </div> -->
         </div>
     </div>
 </div>
 
-
 <script src="./dist/main.js"></script>
 </body>
-
 </html>
